src/styles/global.css
/* ... */
.intro-breath {
  display: flex;
  flex-wrap: wrap;
  height: 100svh;
  align-content: center;
}

.visuallyHidden {
  display: none;
}

.sr-only {
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px 1px 1px 1px);
  /* maybe deprecated but we need to support legacy browsers */
  clip: rect(1px, 1px, 1px, 1px);
  /* modern browsers, clip-path works inwards from each corner */
  clip-path: inset(50%);
  /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
  white-space: nowrap;
}

.image-text-grid {
  display: grid;
  align-items: center;
  gap: 2rem;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  margin-bottom: 10svh;
}

.list-text-grid {
  display: grid;
  align-items: start;
  gap: 2rem;
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.table-grid {
  display: grid;
  grid-template-columns: auto auto;
  column-gap: 2rem;
  & ul {
    font-size: 1.3rem;
    line-height: 1.45rem;
  }
}

.list-pill {
  width: 100%;
  height: 100%;
  li {
    background-color: var(--background-cards);
    margin-bottom: 0.25rem;
    padding: 0.75rem;
    border-radius: var(--card-border-radius);
    padding-left: 2rem;
  }
}

@media (max-width: 1280px) {
  .frame {
    margin-left: var(--left-padding-desktop);
    margin-right: var(--right-padding-desktop);
  }

  .table-msg {
    font-size: 1.2rem;
    line-height: 1.3rem;
  }

  h1 {
    font-size: var(--primary-msg-size-desktop);
  }

  h2 {
    font-size: var(--primary-msg-size-desktop);
  }

  .primary-font-size {
    font-size: var(--primary-msg-size-desktop);
    line-height: var(--primary-msg-line-height-desktop);
  }

  .primary-height {
    min-height: 70svh;
  }

  .primary-margin-top {
    margin-top: 20svh;
  }

  h3 {
    font-size: var(--secondary-msg-size-desktop);
  }

  .msg-secondary {
    font-size: var(--secondary-msg-size-desktop);
    line-height: var(--secondary-msg-line-height-desktop);
  }

  .sticky {
    padding-top: var(--sticky-padding-desktop);
    a {
      padding-top: var(--sticky-padding-desktop);
    }
  }
}

@media (max-width: 1100px) {
  .image-text-grid {
    display: flex;
    flex-direction: column;
  }

  .table-grid {
    grid-template-columns: 1fr 3fr;
    & ul {
      font-size: 1.2rem;
      line-height: 1.3rem;
    }
  }
}

@media (max-width: 920px) {
  .image-text-grid {
    /* padding-left: var(--left-padding-tablet); */
    /* padding-right: var(--right-padding-tablet); */
    & p {
      margin-bottom: 1rem;
    }
  }

  .table-grid {
    grid-template-columns: 1fr;
    padding-left: var(--left-padding-tablet);
    padding-right: var(--right-padding-tablet);
    & h3 {
      margin-top: 1rem;
      margin-bottom: 0;
    }
  }

  .list-text-grid {
    display: flex;
    flex-direction: column;
    gap: 0;
  }
}

@media (max-width: 625px) {
  h2 {
    font-size: var(--primary-msg-size-tablet);
  }

  .frame {
    margin-left: var(--left-padding-tablet);
    margin-right: var(--right-padding-tablet);
  }

  .primary-font-size {
    font-size: var(--primary-msg-size-tablet);
    line-height: var(--primary-msg-line-height-tablet);
  }

  .primary-height {
    min-height: 60svh;
  }

  .primary-margin-top {
    margin-top: 30svh;
  }

  h3 {
    font-size: var(--secondary-msg-size-tablet);
  }

  .msg-secondary {
    /* padding-left: var(--left-padding-tablet); */
    /* padding-right: var(--right-padding-tablet); */
    font-size: var(--primary-msg-size-tablet);
    line-height: var(--primary-msg-line-height-tablet);
    min-height: 20svh;
  }

  .sticky {
    text-wrap: balance;
    padding-top: var(--sticky-padding-tablet);
    a {
      padding-top: var(--sticky-padding-tablet);
    }
  }

  .sticky h2::before {
    content: "BuildSystems";
    letter-spacing: 0.05rem;
    opacity: 0;
  }

  .table-grid {
    & ul {
      font-size: 1.1rem;
      line-height: 1.2rem;
    }
  }

  .list-pill {
    -webkit-padding-start: 0;
    -webkit-padding-end: 0;
  }
}

@media (max-width: 420px) {
  .frame {
    margin-left: var(--left-padding-mobile);
    margin-right: var(--right-padding-mobile);
  }

  h2 {
    font-size: var(--primary-msg-size-mobile);
  }

  .primary-font-size {
    font-size: var(--primary-msg-size-mobile);
    line-height: var(--primary-msg-line-height-mobile);
  }

  .primary-height {
    min-height: 60svh;
  }

  .primary-margin-top {
    margin-top: 30svh;
  }

  .primary-margin-bottom {
    margin-bottom: 3svh;
  }

  .sticky h2::before {
    letter-spacing: 0.04rem;
    content: "BuildSystems";
    opacity: 0;
  }

  h3 {
    font-size: var(--secondary-msg-size-mobile);
  }

  .msg-secondary {
    font-size: var(--secondary-msg-size-mobile);
    line-height: var(--secondary-msg-line-height-mobile);
    min-height: 10svh;
  }

  .sticky {
    padding-top: var(--sticky-padding-mobile);
    a {
      padding-top: var(--sticky-padding-mobile);
    }
  }

  .image-text-grid {
    p {
      font-size: 1.1rem;
      line-height: 1.05rem;
    }
  }

  .table-grid {
    padding-left: var(--left-padding-mobile);
    padding-right: var(--right-padding-mobile);
    & ul {
      font-size: 1rem;
      line-height: 1.1rem;
    }
  }
}

